# FGO-py_Mod

./: .gitignore  CLAUDE.md  requirements.txt
FGO-py/: fgo.py  fgoAndroid.py  fgoCli.py  fgoConfig.py  fgoDetect.py  fgoGui.py  fgoGuiTeamup.py  fgoKernel.py  fgoWebServer.py  pyproject.toml
FGO-py/fgoImage/story/: README.md
MaaFGO/: DEVELOPMENT.md  README.md  config_ui.py  interface.json  mcp_config.md  poc_demo.py  run_with_maa.py
MaaFGO/agent/: __init__.py  detect_adapter.py  device_adapter.py  ocr_helper.py
MaaFGO/config/: maa_pi_config.json
MaaFGO/custom/: __init__.py  advanced_actions.py  battle_logic.py  farming_actions.py  fgo_actions.py  resource_manager.py  smart_battle_action.py  utility_actions.py
MaaFGO/resource/pipeline/: farming.json  main.json  ocr_tasks.json  utility.json
MaaFGO/scripts/: migrate_images.py
MaaFGO/specs/: PROJECT_GOALS.md  SERVICES_ARCHITECTURE.md
MaaFGO/src/MaaFGO.Avalonia/: App.axaml  App.axaml.cs  MaaFGO.Avalonia.csproj  Program.cs  app.manifest
MaaFGO/src/MaaFGO.Avalonia/Services/: BattleService.cs  ConfigService.cs  CustomActionService.cs  FriendService.cs  LoggingService.cs  MaaService.cs
MaaFGO/src/MaaFGO.Avalonia/ViewModels/: MainWindowViewModel.cs  ViewModelBase.cs
memory/: constitution.md
scripts/: create-new-feature.ps1  create-new-feature.sh  list-features.ps1  start_maadebugger.bat  start_maadebugger.ps1  update-claude-md.ps1
specs/: .gitkeep
specs/story-skip/: plan.md  spec.md  tasks.md
templates/: CLAUDE-template.md  plan-template.md  spec-template.md  tasks-template.md
